--- a/Resources/Prototypes/_RMC14/Recipes/Construction/magazine_box_crafting.yml
+++ b/Resources/Prototypes/_RMC14/Recipes/Construction/magazine_box_crafting.yml
@@ -688,6 +688,12 @@
         amount: 1
         doAfter: 0.25
 
+    - to: RMCBoxMagazinePistolM1984HPEmpty
+      steps:
+      - material: RMCSheetCardboard
+        amount: 1
+        doAfter: 0.25
+
     # M77AP
     - to: RMCBoxMagazinePistolM77APEmpty
       steps:
@@ -850,6 +856,8 @@
     entity: RMCBoxMagazinePistolM1984Empty
   - node: RMCBoxMagazinePistolM1984APEmpty
     entity: RMCBoxMagazinePistolM1984APEmpty
+  - node: RMCBoxMagazinePistolM1984HPEmpty
+    entity: RMCBoxMagazinePistolM1984HPEmpty
 
   # M77AP
   - node: RMCBoxMagazinePistolM77APEmpty
