bunch of access shit, ap mag fix, area

--- a/Resources/Prototypes/_RMC14/Entities/Objects/Weapons/Guns/Rifles/l83a2_rifle.yml
+++ b/Resources/Prototypes/_RMC14/Entities/Objects/Weapons/Guns/Rifles/l83a2_rifle.yml
@@ -176,6 +176,7 @@
   - type: Tag
     tags:
     - CMMagazineRifle
+    - RMCMagazineRifleL83A2
     - RMCMagazineRifleL83A2AP
   - type: BallisticAmmoProvider
     whitelist:
