--- a/Resources/Prototypes/_RMC14/Roles/Jobs/Other/TSE/TSEPA/tsepa_constable.yml
+++ b/Resources/Prototypes/_RMC14/Roles/Jobs/Other/TSE/TSEPA/tsepa_constable.yml
@@ -11,7 +11,7 @@
   icon: "RMCJobIconTSEPAConstable"
   joinNotifyCrew: false
   accessGroups:
-  - ColonistSec
+  - ColonistTSEPA
   special:
   - !type:AddComponentSpecial
     components:
