--- a/Resources/Prototypes/_RMC14/Roles/Jobs/Other/TSE/TSEPA/tsepa_inspector.yml
+++ b/Resources/Prototypes/_RMC14/Roles/Jobs/Other/TSE/TSEPA/tsepa_inspector.yml
@@ -11,7 +11,7 @@
   icon: "RMCJobIconTSEPAInspector"
   joinNotifyCrew: false
   accessGroups:
-  - ColonistSec
+  - ColonistTSEPAInspector
   special:
   - !type:AddComponentSpecial
     components:
