--- a/Resources/Prototypes/_RMC14/Roles/Jobs/Other/TSE/TSEPA/tsepa_inspector.yml
+++ b/Resources/Prototypes/_RMC14/Roles/Jobs/Other/TSE/TSEPA/tsepa_inspector.yml
@@ -40,21 +40,14 @@
 - type: startingGear
   id: RMCGearTSEPAInspector
   equipment:
-    head: RMCHeadBeretTSEPA
+    head: RMCHeadCapTSEPAPeaked
     ears: RMCHeadsetTSEPA
     jumpsuit: RMCJumpsuitTSEPA
-    outerClothing: RMCArmourM4TSEPAChief
     gloves: RMCHandsVeteran
     shoes: CMBootsBlackFilled
-    suitstorage: WeaponRifleL83A2
-    id: RMCIDCardTSEPA
+    id: RMCIDCardTSEPAGold
     belt: RMCBeltHolsterRevolverSpearheadFill
     back: RMCSatchelTSEPA
-  storage:
-    back:
-    - RMCMagazineRifleL83A2
-    - RMCMagazineRifleL83A2
-    - RMCMagazineRifleL83A2AP
 
 - type: entity
   parent: CMSpawnPointJobBase
