Add all survs to the surv department job group

--- a/Resources/Prototypes/_RMC14/Roles/Jobs/Departments/survivor_department.yml
+++ b/Resources/Prototypes/_RMC14/Roles/Jobs/Departments/survivor_department.yml
@@ -11,6 +11,14 @@
   - CMSurvivorEngineer
   - CMSurvivorSecurity
   - CMSurvivorCorporate
+  - CMSurvivorBeachBum
+  - CMSurvivorMiner
+  - CMSurvivorTechnician
+  - CMSurvivorCargoTechnician
+  - CMSurvivorMedicalTechnician
+  - CMSurvivorUNPeacekeeper
+  - CMSurvivorICB
+  - RMCSurvivorCommanderNewVaradero
   - RMCSurvivorCommandingOfficer
   departmentRadio: null
   headOfDepartment: null
