tsepa synth, misc changes

--- a/Resources/Prototypes/_RMC14/Catalog/Fills/Lockers/marine.yml
+++ b/Resources/Prototypes/_RMC14/Catalog/Fills/Lockers/marine.yml
@@ -27,3 +27,11 @@
     - id: RMCGlassesSmartGunSight
     - id: RMCWebbingClipOnPouch
     - id: RMCWebbingGrenade
+
+- type: entityTable
+  id: RMCClosetTSEPAFill
+  table: !type:AllSelector
+    children:
+    - id: RMCArmourM4TSEPA
+    - id: RMCCoatTSEPAHighVis
+    - id: RMCCoatTSEPAHighVisVest
