--- a/Resources/Prototypes/_RMC14/Entities/Structures/Storage/lockers.yml
+++ b/Resources/Prototypes/_RMC14/Entities/Structures/Storage/lockers.yml
@@ -432,6 +432,10 @@
   components:
   - type: AccessReader
     access: [["RMCAccessTSEPABrig"]]
+  - type: EntityTableContainerFill
+    containers:
+      entity_storage: !type:NestedSelector
+        tableId: RMCClosetTSEPAFill
 
 - type: entity
   parent: CMLockerPolice
@@ -440,3 +444,7 @@
   components:
   - type: AccessReader
     access: [["RMCAccessTSEPA"]]
+  - type: EntityTableContainerFill
+    containers:
+      entity_storage: !type:NestedSelector
+        tableId: RMCClosetTSEPAFill
