--- a/Resources/Prototypes/_RMC14/Entities/Objects/Weapons/Guns/Rifles/l83a2_rifle.yml
+++ b/Resources/Prototypes/_RMC14/Entities/Objects/Weapons/Guns/Rifles/l83a2_rifle.yml
@@ -60,6 +60,7 @@
         whitelist:
           tags:
           - RMCMagazineRifleL83A2
+          - RMCMagazineRifleL83A2AP
   - type: GunDamageModifier
     multiplier: 1.3
   - type: AttachableHolder
