always forget this

--- a/Resources/Prototypes/_RMC14/Maps/golden_arrow.yml
+++ b/Resources/Prototypes/_RMC14/Maps/golden_arrow.yml
@@ -6,7 +6,7 @@
   maxRandomOffset: 0
   randomRotation: false
   stations:
-    Savannah:
+    GoldenArrow:
       stationProto: StandardUNMCWarship
       components:
         - type: StationNameSetup
