fix GA test fail (#6659)

--- a/Resources/Prototypes/_RMC14/Maps/golden_arrow.yml
+++ b/Resources/Prototypes/_RMC14/Maps/golden_arrow.yml
@@ -1,12 +1,12 @@
 - type: gameMap
-  id: Golden Arrow
-  mapName: "Golden Arrow"
+  id: GoldenArrow
+  mapName: "GoldenArrow"
   mapPath: /Maps/_RMC14/golden_arrow.yml
   minPlayers: 0
   maxRandomOffset: 0
   randomRotation: false
   stations:
-    Savannah:
+    GoldenArrow:
       stationProto: StandardUNMCWarship
       components:
         - type: StationNameSetup
