--- a/Resources/Prototypes/_RMC14/Maps/golden_arrow.yml
+++ b/Resources/Prototypes/_RMC14/Maps/golden_arrow.yml
@@ -12,12 +12,12 @@
         - type: StationNameSetup
           mapNameTemplate: 'UNS Golden Arrow'
         - type: StationJobs
-          availableJobs:
-            # Command
-            CMExecutiveOfficer: [1, 1]
-            CMStaffOfficer: [2, 2]
-
-            # Marines
-            CMSquadLeader: [1, 1]
-            CMSmartGunOperator: [4, 4]
-            CMRifleman: [ 35, 35 ]
+          availableJobs: {}
+#            # Command
+#            CMExecutiveOfficer: [1, 1]
+#            CMStaffOfficer: [2, 2]
+#
+#            # Marines
+#            CMSquadLeader: [1, 1]
+#            CMSmartGunOperator: [4, 4]
+#            CMRifleman: [ 35, 35 ]
